# tenant_advocate_vdb

./: .gitignore  README.MD  data_parsing.py  embedding_nb.ipynb  main.py  pyproject.toml  requirements.txt  test.ipynb  vector_store.py
vdb/tenancy_regulations/2c50e6c6-be16-462f-b668-318531898501/: index_metadata.pickle
