[project]
name = "ai-at3-database"
version = "0.1.0"
description = "This is an API for connecting and querying the rental regulations vector db"
authors = [
    {name = "Mitali-UTS",email = "mitali.H.balki@stdent.uts.edu.au"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers (>=5.4.1,<6.0.0)",
    "chromadb (>=1.5.8,<2.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "huggingface-hub (>=1.12.0,<2.0.0)",
    "hf-xet (>=1.4.3,<2.0.0)",
    "fastapi-cli (>=0.0.24,<0.0.25)",
    "pandas (>=3.0.2,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "pdfplumber (>=0.11.9,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

[tool.poetry]
package-mode = false